--- a/.travis.yml
+++ b/.travis.yml
@@ -6,34 +6,50 @@ python:
   - "2.7"
   - "3.6"
   - "3.8"
-  - "pypy"
   - "pypy3"
 
 jobs:
   allow_failures:
     # These don't need to work, but be nice if they did
-    - python: "pypy"
+    - python: "2.7"
     - python: "pypy3"
 
-# Just some useful info and minor env fixes
+  fast_finish: true
+
+# Just some useful info and prep work
 before_install:
   - uname -a
-  - python -VV
   - pip install -U pip
   - pip install -U pytest
+
+  # setup the 'simple major ver' link, missing for some versions on travis-ci....
+  - if [[ ! -e /opt/python/${TRAVIS_PYTHON_VERSION} ]]; then
+        cd /opt/python/;
+        ln -s $(python -c 'import sys;print("%d.%d.%d" % sys.version_info[:3])') ${TRAVIS_PYTHON_VERSION};
+    fi
 
 # Environment variables
 env:
   - LD_LIBRARY_PATH="${TRAVIS_BUILD_DIR}/framework/logicengine/"   PYTHON_PATH=$(dirname ${TRAVIS_BUILD_DIR})
 
-# command to install dependencies
+# commands to install any dependencies
 install:
-  - sudo apt-get -y install cmake libboost-all-dev g++ python-dev
+  - sudo apt-get -y install cmake libboost-all-dev g++
+
+    # Setup pkg-config and cmake search paths to use the virtualenv python from travis
+  - export PKG_CONFIG_PATH="/opt/python/${TRAVIS_PYTHON_VERSION}/lib/pkgconfig"
+  - export CMAKE_INCLUDE_PATH="/opt/python/${TRAVIS_PYTHON_VERSION}/include/python${TRAVIS_PYTHON_VERSION}m/include/;/opt/python/${TRAVIS_PYTHON_VERSION}/include/python${TRAVIS_PYTHON_VERSION}/include/;/opt/python/${TRAVIS_PYTHON_VERSION}/include/"
+  - export CMAKE_LIBRARY_PATH="/opt/python/${TRAVIS_PYTHON_VERSION}/lib/;/opt/python/${TRAVIS_PYTHON_VERSION}/lib_pypy/"
+  - export PYVER=$(python -c 'import sys; print("%d.%d" % (sys.version_info.major, sys.version_info.minor))')
+
+  # run cmake and build logic engine
   - mkdir -p ${TRAVIS_BUILD_DIR}/framework/logicengine/cxx/build
   - cd ${TRAVIS_BUILD_DIR}/framework/logicengine/cxx/build
-  - cmake ..
+  - cmake -DPYVER=${PYVER} -DCMAKE_LIBRARY_PATH="${CMAKE_LIBRARY_PATH}" -DCMAKE_INCLUDE_PATH="${CMAKE_INCLUDE_PATH}" ..
   - make
   - make liblinks
+
+  # pull in any listed python requirements
   - cd ${TRAVIS_BUILD_DIR}
   - pip install -r requirements.txt
   - pip install coveralls
