Adjust CMakeLists.txt files to use correct Python versions

--- a/framework/logicengine/cxx/ErrorHandler/CMakeLists.txt
+++ b/framework/logicengine/cxx/ErrorHandler/CMakeLists.txt
@@ -1,3 +1,9 @@
+include_directories(
+    ${PROJECT_SOURCE_DIR}
+    ${Boost_INCLUDE_DIRS}
+    ${PYTHON_INCLUDE_DIRS}
+)
+
 add_library(LogicEngine SHARED
     jsoncpp.cc
     ma_action.cpp
