--- a/framework/logicengine/cxx/CMakeLists.txt
+++ b/framework/logicengine/cxx/CMakeLists.txt
@@ -1,4 +1,3 @@
-
 cmake_minimum_required(VERSION 3.0)
 
 project(logicengine)
@@ -6,30 +5,14 @@ project(logicengine)
 set(logicengine_version_major 2)
 set(logicengine_version_minor 0)
 
-#set(CMAKE_CXX_FLAGS "-std=c++1y -DASIO_STANDALONE ${CMAKE_CXX_FLAGS}")
 set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
 
-#OpenSSL Libraries
 find_package(Boost REQUIRED)
-find_package(PythonLibs ${PYVER})
+find_package(PythonInterp ${PYVER} REQUIRED)
+find_package(PythonLibs REQUIRED)
 
 # for vim ycm plugin
 set(CMAKE_EXPORT_COMPILE_COMMANDS "ON")
-
-include_directories(
-    ${PROJECT_SOURCE_DIR}
-    ${PROJECT_SOURCE_DIR}/src
-    ${PROJECT_SOURCE_DIR}/utils
-    ${Boost_INCLUDE_DIRS}
-    ${PYTHON_INCLUDE_DIRS}
-)
-#INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS})
-
-link_directories(
-    ${PROJECT_SOURCE_DIR}/install/lib
-)
-
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 
 add_subdirectory(ErrorHandler)
 
