Add pylint github action.
    Add rpm build github action.

    Change unit tests github action to use relative reference for action.yaml as with the other two.

    Updated spec and scripts to use cmake3

    Only trigger rpm build on release(tag) creation.

    Only run pylint and unit tests on pull requests.

    Use hepcloud/decision-engine-ci

    https://fermicloud140.fnal.gov/reviews/r/32/

--- a/.github/workflows/pylint.yaml
+++ b/.github/workflows/pylint.yaml
@@ -1,21 +1,22 @@
 on: [pull_request]
 
 jobs:
-  unit_test_job:
+  pylint_job:
     runs-on: ubuntu-latest
-    name: A job to run unit tests
+    name: A job to build the decision engine rpm
     steps:
     - uses: actions/checkout@v2
     - name: Checkout
       uses: actions/checkout@v2
       with:
         path: 'decisionengine'
-    - name: unit test action step
-      id: unit_test
-      uses: ./.github/actions/unittest-in-sl7-docker
-    - name: Archive unittest log
+      id: checkout
+    - name: pylint action step
+      uses: ./.github/actions/pylint-in-sl7-docker
+      id: pylint
+    - name: Archive reports
       if: always()
       uses: actions/upload-artifact@v1
       with:
-        name: test-log
-        path: test.log
+        name: reports
+        path: logs.tar.bz2
