--- a/.github/actions/rpmbuild-in-sl7-docker/action.yaml
+++ b/.github/actions/rpmbuild-in-sl7-docker/action.yaml
@@ -1,5 +1,11 @@
 name: 'RPM build'
 description: 'Run rpm build in preconfigured SL7 docker image'
+inputs:
+  PYVER:
+    description: "The python version to build with."
+    required: true
 runs:
   using: 'docker'
   image: 'Dockerfile'
+  args:
+    - ${{ inputs.PYVER }}
