--- a/.github/workflows/rpm-build.yaml
+++ b/.github/workflows/rpm-build.yaml
@@ -1,28 +1,29 @@
-on:
-  push:
-    branches:
-      - master
-    tags:
-      - v*
-      - 0*
+on: [pull_request, push]
 
 jobs:
   rpm_build_job:
     runs-on: ubuntu-latest
     name: A job to build the decision engine rpm
+    strategy:
+      matrix:
+        pyver: ["2.7", "3.6"]
+      fail-fast: false
+
     steps:
-    - uses: actions/checkout@v2
-    - name: Checkout
-      uses: actions/checkout@v2
-      with:
-        path: 'decisionengine'
-      id: checkout
-    - name: rpm build action step
-      uses: ./.github/actions/rpmbuild-in-sl7-docker
-      id: rpm_build
-    - name: Archive rpm
-      if: always()
-      uses: actions/upload-artifact@v1
-      with:
-        name: rpms
-        path: rpmbuild.tar
+      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          path: 'decisionengine'
+        id: checkout
+      - name: rpm build action step
+        uses: ./.github/actions/rpmbuild-in-sl7-docker
+        id: rpm_build
+        with:
+          PYVER: ${{ matrix.pyver }}
+      - name: Archive rpm
+        if: always()
+        uses: actions/upload-artifact@v1
+        with:
+          name: rpms
+          path: rpmbuild-${{ matrix.pyver }}.tar
