Updates to Github Actions to allow building with python3.6

--- a/.github/workflows/rpm-build.yaml
+++ b/.github/workflows/rpm-build.yaml
@@ -10,19 +10,25 @@ jobs:
   rpm_build_job:
     runs-on: ubuntu-latest
     name: A job to build the decision engine rpm
+    strategy:
+      matrix:
+        pyver: ["2.7", "3.6"]
+
     steps:
-    - uses: actions/checkout@v2
-    - name: Checkout
-      uses: actions/checkout@v2
-      with:
-        path: 'decisionengine'
-      id: checkout
-    - name: rpm build action step
-      uses: ./.github/actions/rpmbuild-in-sl7-docker
-      id: rpm_build
-    - name: Archive rpm
-      if: always()
-      uses: actions/upload-artifact@v1
-      with:
-        name: rpms
-        path: rpmbuild.tar
+      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          path: 'decisionengine'
+        id: checkout
+      - name: rpm build action step
+        uses: ./.github/actions/rpmbuild-in-sl7-docker
+        id: rpm_build
+        with:
+          PYVER: ${{ matrix.pyver }}
+      - name: Archive rpm
+        if: always()
+        uses: actions/upload-artifact@v1
+        with:
+          name: rpms
+          path: rpmbuild-${{ matrix.pyver }}.tar
