--- a/framework/logicengine/cxx/ErrorHandler/CMakeLists.txt
+++ b/framework/logicengine/cxx/ErrorHandler/CMakeLists.txt
@@ -33,4 +33,7 @@ add_executable(test_main test_main.cc)
 target_link_libraries(test_main LogicEngine boost_regex boost_system)
 
 python_add_module(RE py_rule_engine.cc)
-target_link_libraries(RE LogicEngine boost_python boost_regex boost_system ${PYTHON_LIBRARIES})
+target_link_libraries(RE LogicEngine
+                      boost_python${BOOST_PY_SUFFIX}
+                      boost_system
+                      ${PYTHON_LIBRARIES})
