Cat output of pytest log     Exit pylint entrypoint with the line count of pep8 and pylint logs     Deal with (detach from ...)     Only tar up (S)RPMS dirs for rpm build.

--- a/.github/workflows/unit-test.yaml
+++ b/.github/workflows/unit-test.yaml
@@ -24,4 +24,4 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: test-log
-          path: test-${{ matrix.pyver }}.log
+          path: pytest-${{ matrix.pyver }}.log
