--- a/.github/workflows/rpm-build.yaml
+++ b/.github/workflows/rpm-build.yaml
@@ -4,11 +4,6 @@ jobs:
   rpm_build_job:
     runs-on: ubuntu-latest
     name: A job to build the decision engine rpm
-    strategy:
-      matrix:
-        pyver: ["2.7", "3.6"]
-      fail-fast: false
-
     steps:
       - name: Sparse checkout
         shell: bash
@@ -37,11 +32,9 @@ jobs:
       - name: rpm build action step
         uses: ./.github/actions/rpmbuild-in-sl7-docker
         id: rpm_build
-        with:
-          PYVER: ${{ matrix.pyver }}
       - name: Archive rpm
         if: always()
         uses: actions/upload-artifact@v1
         with:
           name: rpms
-          path: rpmbuild-${{ matrix.pyver }}.tar
+          path: rpmbuild.tar
