Add sudo to docker image to run sudo rpm install

--- a/.github/actions/rpmbuild-in-sl7-docker/Dockerfile
+++ b/.github/actions/rpmbuild-in-sl7-docker/Dockerfile
@@ -1,6 +1,8 @@
 FROM hepcloud/decision-engine-ci
 COPY entrypoint.sh /entrypoint.sh
+RUN yum -y install sudo
+RUN echo "%wheel        ALL=(ALL)       NOPASSWD: ALL" >/etc/sudoers.d/wheel
 RUN groupadd -g 115 decision-engine-ci
-RUN useradd -u 1001 -g 115 decision-engine-ci
+RUN useradd -u 1001 -g 115 -g wheel decision-engine-ci
 USER decision-engine-ci
 ENTRYPOINT ["/entrypoint.sh"]
