Add reaper to the RPC

--- a/framework/tests/etc/decisionengine/decision_engine.conf
+++ b/framework/tests/etc/decisionengine/decision_engine.conf
@@ -3,11 +3,15 @@
                 'max_file_size': 200*1000000,
                 'max_backup_count': 6,
             },
+
     'channels' : 'conf.d',
 
     'server_address' : ("localhost",8888),
 
     'dataspace': {
+        'reaper_start_delay_seconds': 1818,
+        'retention_interval_in_days': 370,
+
         'datasource' : {
 #            'module': 'decisionengine.framework.dataspace.datasources.object',
 #            'name': 'ObjectDB',
