Update to PostgreSQL 11

--- a/.travis.yml
+++ b/.travis.yml
@@ -55,6 +55,14 @@ install:
   - sudo apt-get install -y wget libicu-dev zlib1g-dev libbz2-dev g++
   - cd ~/
   - sudo chown -R travis /usr/local/
+
+  # install PostgreSQL 11
+  - wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
+  - sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt/ $(lsb_release -sc)-pgdg main" > /etc/apt/sources.list.d/PostgreSQL.list'
+  - sudo apt update
+  - sudo apt-get install postgresql-11
+  - export PG_CTL="/usr/lib/postgresql/11/bin/pg_ctl"
+
   ## This version of boost matches the default version in travis
   - travis_retry wget -c http://sourceforge.net/projects/boost/files/boost/1.58.0/boost_1_58_0.tar.gz
   - tar xf boost_1_58_0.tar.gz
