--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ before_install:
 
 # Environment variables
 env:
-  - LD_LIBRARY_PATH="${TRAVIS_BUILD_DIR}/framework/logicengine/"   PYTHON_PATH=$(dirname ${TRAVIS_BUILD_DIR})
+  - LD_LIBRARY_PATH="${TRAVIS_BUILD_DIR}/framework/logicengine/"   PYTHONPATH=$(dirname ${TRAVIS_BUILD_DIR})    PYTHON_PATH=${PYTHONPATH}
 
 # commands to install any dependencies
 install:
