--- a/.pep8speaks.yml
+++ b/.pep8speaks.yml
@@ -12,6 +12,8 @@ flake8:
       - E302 # expected 2 blank lines, found 1
       - E261 # at least two spaces before inline comment
       - E265 # block comment should start with '# '
+      - W503 # permit line breaks in binary operators
+      - W504 # permit line breaks in binary operators
 
     exclude: []
     count: True
