--- a/.gitignore
+++ b/.gitignore
@@ -64,8 +64,8 @@ instance/
 .scrapy
 
 # Sphinx documentation
-docs/_build/
-docs/sources/code
+doc/build/
+doc/sources/code/
 # PyBuilder
 target/
 
