Setup gh-pages doc workflow

--- a/.github/workflows/pylint.yaml
+++ b/.github/workflows/pylint.yaml
@@ -1,4 +1,12 @@
-on: [pull_request, push]
+name: Run pylint against code tree
+
+on:
+  pull_request:
+    branches:
+      - master
+  push:
+    branches:
+      - master
 
 jobs:
   pylint_job:
