--- a/.github/workflows/rpm-build.yaml
+++ b/.github/workflows/rpm-build.yaml
@@ -1,4 +1,12 @@
-on: [pull_request, push]
+name: Build DecisionEngine RPM
+
+on:
+  pull_request:
+    branches:
+      - master
+  push:
+    branches:
+      - master
 
 jobs:
   rpm_build_job:
