Make it possible to run code directly (for tests), and then write those tests.

--- a/.coveragerc
+++ b/.coveragerc
@@ -6,6 +6,8 @@ source = framework
 omit = */tests/*
 
 [report]
+skip_empty = True
+
 # Regexes for lines to exclude from consideration
 exclude_lines =
     # Have to re-enable the standard pragma
