changes made to add logging functionality. the initial log level can now be specified in the configuration. also, client/server function has been added to allow user to set the log level for an individual channel from the command line.

--- a/framework/tests/etc/decisionengine/decision_engine.conf
+++ b/framework/tests/etc/decisionengine/decision_engine.conf
@@ -2,6 +2,7 @@
     'logger' : {'log_file': '%s/de_log/decision_engine_log'%(os.environ.get('HOME'),),
                 'max_file_size': 200*1000000,
                 'max_backup_count': 6,
+                'log_level': "DEBUG", 
             },
 
     'channels' : 'conf.d',
@@ -13,9 +14,6 @@
         'retention_interval_in_days': 370,
 
         'datasource' : {
-#            'module': 'decisionengine.framework.dataspace.datasources.object',
-#            'name': 'ObjectDB',
-#            'config': { },
            'module' : 'decisionengine.framework.dataspace.datasources.postgresql',
 	   'name' : 'Postgresql',
 	   'config' : {
