logging functionality: added command line and config capabilities
    - the initial log level can now be specified in the configuration.
    - also, client/server function has been added to allow user to set the log level for an individual channel from the command line.
    - unit tests have been added for these client-server functions
    - fixed broken 'show-config' command
    - added 'show-de-config' which shows global config

    RB : https://fermicloud140.fnal.gov/reviews/r/169/

--- a/framework/tests/etc/decisionengine/decision_engine.conf
+++ b/framework/tests/etc/decisionengine/decision_engine.conf
@@ -2,7 +2,8 @@
     'logger' : {'log_file': '%s/de_log/decision_engine_log'%(os.environ.get('HOME'),),
                 'max_file_size': 200*1000000,
                 'max_backup_count': 6,
-                'log_level': "DEBUG",
+                'log_level': "WARNING",
+                'global_channel_log_level':"WARNING",
             },
 
     'channels' : 'conf.d',
