Show output of test runtimes in travis
RB: https://fermicloud140.fnal.gov/reviews/r/214/

--- a/.travis.yml
+++ b/.travis.yml
@@ -90,6 +90,6 @@ install:
 # command to run tests
 script:
   - cd ${TRAVIS_BUILD_DIR}
-  - coverage run -m pytest -v -l --tb=native ${TRAVIS_BUILD_DIR}/../
+  - coverage run -m pytest -v -l --durations=0 --tb=native ${TRAVIS_BUILD_DIR}/../
 
   - coveralls
