Fix coveralls reporting.

--- a/.travis.yml
+++ b/.travis.yml
@@ -91,5 +91,5 @@ install:
 script:
   - cd ${TRAVIS_BUILD_DIR}
   - coverage run -m pytest -v -l --durations=0 --tb=native ${TRAVIS_BUILD_DIR}/../
-
+  - coverage combine
   - coveralls
