--- a/.travis.yml
+++ b/.travis.yml
@@ -8,14 +8,18 @@ branches:
 # What versions of python do we test with
 python:
   - "3.6"
+  - "3.7"
   - "3.8"
   - "pypy3"
+  - "nightly"
 
 jobs:
   allow_failures:
     # These don't need to work, but be nice if they did
     # https://svn.boost.org/trac10/ticket/4125 / https://github.com/boostorg/python/pull/291
     - python: "pypy3"
+    # Latest python tested for future planning purposes
+    - python: "nightly"
 
   fast_finish: true
 
@@ -24,15 +28,28 @@ before_install:
   - uname -a
   - pip install -U pip
   - pip install -U pytest
+  - echo ${TRAVIS_PYTHON_VERSION}
+  - PYTHON_VERSION=$(python -c 'import sys;print("%d.%d" % sys.version_info[:2])')
+  - PYTHON_FULL_VERSION=$(python -c 'import sys;print("%d.%d.%d" % sys.version_info[:3])')
+
+  # setup the 'named version' link for nightly builds
+  - if [[ "${TRAVIS_PYTHON_VERSION}" == "nightly" ]]; then
+        sudo ln -s /opt/python/${PYTHON_VERSION}-dev /opt/python/${TRAVIS_PYTHON_VERSION};
+        echo "Made /opt/python/${TRAVIS_PYTHON_VERSION}";
+    fi
 
   # setup the 'simple major ver' link, missing for some versions on travis-ci....
   - if [[ ! -e /opt/python/${TRAVIS_PYTHON_VERSION} ]]; then
-        sudo ln -s /opt/python/$(python -c 'import sys;print("%d.%d.%d" % sys.version_info[:3])') /opt/python/${TRAVIS_PYTHON_VERSION};
+        sudo ln -s /opt/python/${PYTHON_FULL_VERSION} /opt/python/${TRAVIS_PYTHON_VERSION};
+        echo "Made /opt/python/${TRAVIS_PYTHON_VERSION}";
     fi
 
+  # Show loaded pythons
+  - ls -l /opt/python/
+
   # some things don't look for pymalloc version
-  - if [[ ! -e /opt/python/${TRAVIS_PYTHON_VERSION}/include/python${TRAVIS_PYTHON_VERSION} ]]; then
-        sudo ln -s /opt/python/${TRAVIS_PYTHON_VERSION}/include/python${TRAVIS_PYTHON_VERSION}m /opt/python/${TRAVIS_PYTHON_VERSION}/include/python${TRAVIS_PYTHON_VERSION};
+  - if [[ ! -e /opt/python/${TRAVIS_PYTHON_VERSION}/include/python${PYTHON_VERSION} ]]; then
+        sudo ln -s /opt/python/${TRAVIS_PYTHON_VERSION}/include/python${PYTHON_VERSION}m /opt/python/${TRAVIS_PYTHON_VERSION}/include/python${PYTHON_VERSION};
     fi
 
   # old cmake and boost can't always find pypy
