--- a/framework/logicengine/cxx/CMakeLists.txt
+++ b/framework/logicengine/cxx/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.0)
 
-project(logicengine)
+project(logicengine LANGUAGES CXX)
 
-set(logicengine_version_major 2)
+set(logicengine_version_major 3)
 set(logicengine_version_minor 0)
 
 set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS} -pedantic -Wall -g -O3")
@@ -10,35 +10,27 @@ set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS} -pedantic -Wall -g -O3")
 find_package(PythonInterp ${PYVER} REQUIRED)
 find_package(PythonLibs REQUIRED)
 find_package(Boost REQUIRED)
+find_package(pybind11 REQUIRED)
 
 # for vim ycm plugin
 set(CMAKE_EXPORT_COMPILE_COMMANDS "ON")
 
-set(BOOST_PY_SUFFIX 3)
-if(PYTHONLIBS_VERSION_STRING VERSION_LESS "3.0.0")
-  set(BOOST_PY_SUFFIX)
-endif()
-
-include_directories(
-    ${PROJECT_SOURCE_DIR}
-    ${Boost_INCLUDE_DIRS}
-    ${PYTHON_INCLUDE_DIRS}
-)
-
-add_library(LogicEngine SHARED
+pybind11_add_module(RE
+    MODULE
+    NO_EXTRAS
     ma_boolean_andexpr.cpp
     ma_boolean_cond.cpp
     ma_boolean_expr.cpp
     ma_parse.cpp
     Rule.cpp
     RuleEngine.cpp
+    py_rule_engine.cc
 )
-target_link_libraries(LogicEngine boost_regex)
 
-python_add_module(RE py_rule_engine.cc)
-target_link_libraries(RE LogicEngine
-                      boost_python${BOOST_PY_SUFFIX}
-                      boost_system
-                      ${PYTHON_LIBRARIES})
+target_include_directories(RE PRIVATE ${PYTHON_INCLUDE_DIRS} pybind11::headers)
+target_link_libraries(RE PRIVATE pybind11::module pybind11::embed)
+set_target_properties(RE PROPERTIES SUFFIX ".so")
 
-add_custom_target(liblinks ln -s ${CMAKE_BINARY_DIR}/RE.so ${CMAKE_SOURCE_DIR}/../ COMMAND ln -s ${CMAKE_BINARY_DIR}/libLogicEngine.so ${CMAKE_SOURCE_DIR}/../)
+# Install in decisionengine/framework/logicengine subdirectory for
+# Python runtime availability
+install(TARGETS RE DESTINATION ${CMAKE_SOURCE_DIR}/../)
