Move Python C extension to versioned .so file
RB: https://fermicloud140.fnal.gov/reviews/r/268/

--- a/framework/logicengine/cxx/CMakeLists.txt
+++ b/framework/logicengine/cxx/CMakeLists.txt
@@ -15,6 +15,10 @@ find_package(pybind11 REQUIRED)
 # for vim ycm plugin
 set(CMAKE_EXPORT_COMPILE_COMMANDS "ON")
 
+# python is starting to look at versioned .so suffix
+execute_process(COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_SOURCE_DIR}/abisuffix.py OUTPUT_VARIABLE EXT_SUFFIX)
+message(STATUS "Python suffix detected: '${EXT_SUFFIX}'")
+
 pybind11_add_module(RE
     MODULE
     NO_EXTRAS
@@ -29,7 +33,7 @@ pybind11_add_module(RE
 
 target_include_directories(RE PRIVATE ${PYTHON_INCLUDE_DIRS} pybind11::headers)
 target_link_libraries(RE PRIVATE pybind11::module pybind11::embed)
-set_target_properties(RE PROPERTIES SUFFIX ".so")
+set_target_properties(RE PROPERTIES SUFFIX ${EXT_SUFFIX})
 
 # Install in decisionengine/framework/logicengine subdirectory for
 # Python runtime availability
