--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,6 @@ psycopg2-binary
 pytest-postgresql >= 2.5.0
 pytest-timeout
 sphinx_rtd_theme
+
+# conditional requirements
+psycopg2cffi; platform_python_implementation == 'PyPy'
