--- a/.travis.yml
+++ b/.travis.yml
@@ -107,5 +107,5 @@ install:
 script:
   - cd ${TRAVIS_BUILD_DIR}
   - coverage run -p -m pytest -v -l --durations=0 --tb=native ${TRAVIS_BUILD_DIR}/../
-  - coverage combine
+  - travis_wait coverage combine
   - coveralls
