Switch to more modern cmake python search

--- a/framework/logicengine/cxx/CMakeLists.txt
+++ b/framework/logicengine/cxx/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.16)
 
 project(logicengine LANGUAGES CXX)
 
@@ -7,16 +7,19 @@ set(logicengine_version_minor 0)
 
 set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS} -pedantic -Wall -g -O3")
 
-find_package(PythonInterp ${PYVER} REQUIRED)
-find_package(PythonLibs REQUIRED)
+# To use pypy '-DPython_FIND_IMPLEMENTATIONS=PyPy'
+set (Python_FIND_STRATEGY "LOCATION")
+find_package (Python COMPONENTS Interpreter Development)
+message(STATUS "Python Executable: '${Python_EXECUTABLE}'")
 find_package(Boost REQUIRED)
-find_package(pybind11 REQUIRED)
+find_package(pybind11 2.6 CONFIG REQUIRED)
+message(STATUS "Found pybind11 v${pybind11_VERSION}: ${pybind11_INCLUDE_DIRS}")
 
 # for vim ycm plugin
 set(CMAKE_EXPORT_COMPILE_COMMANDS "ON")
 
 # python is starting to look at versioned .so suffix
-execute_process(COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_SOURCE_DIR}/abisuffix.py OUTPUT_VARIABLE EXT_SUFFIX)
+execute_process(COMMAND ${Python_EXECUTABLE} ${CMAKE_SOURCE_DIR}/abisuffix.py OUTPUT_VARIABLE EXT_SUFFIX)
 message(STATUS "Python suffix detected: '${EXT_SUFFIX}'")
 
 pybind11_add_module(RE
@@ -31,7 +34,7 @@ pybind11_add_module(RE
     py_rule_engine.cc
 )
 
-target_include_directories(RE PRIVATE ${PYTHON_INCLUDE_DIRS} pybind11::headers)
+target_include_directories(RE PRIVATE ${Python_INCLUDE_DIRS} pybind11::headers)
 target_link_libraries(RE PRIVATE pybind11::module pybind11::embed)
 set_target_properties(RE PROPERTIES SUFFIX ${EXT_SUFFIX})
 
