--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -60,7 +60,7 @@ jobs:
         run: |
           mkdir -p ${{ github.workspace }}/framework/logicengine/cxx/build
           cd ${{ github.workspace }}/framework/logicengine/cxx/build
-          cmake -DPYVER=$(python -c 'import sys; print("%d.%d" % (sys.version_info.major, sys.version_info.minor))') -Dpybind11_DIR=$(pybind11-config --cmakedir) ..
+          cmake -DPython_FIND_IMPLEMENTATIONS=$(python -c 'import platform; print(platform.python_implementation())') -Dpybind11_DIR=$(pybind11-config --cmakedir) ..
           make install
           cd ${{ github.workspace }}
 
