--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # for buildtime
-pybind11
+pybind11 >= 2.6.0
 
 # for runtime
 jsonnet
@@ -13,10 +13,10 @@ mock
 pycodestyle
 pylint
 pytest
-psycopg2-binary
 pytest-postgresql >= 2.5.0
 pytest-timeout
 sphinx_rtd_theme
 
 # conditional requirements
+psycopg2-binary; platform_python_implementation == 'CPython'
 psycopg2cffi; platform_python_implementation == 'PyPy'
