--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -50,6 +50,7 @@ jobs:
         run: |
           sudo apt-get install -y libboost-dev
           python -m pip install --upgrade pip
+          python -m pip install --upgrade wheel
           python -m pip install --upgrade pytest
           python -m pip install -r requirements.txt
           python -m pip install coveralls
