Move to CodeCov.io
RB: https://fermicloud140.fnal.gov/reviews/r/315/

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,14 +5,15 @@ pybind11
 jsonnet
 pandas
 tabulate
-
-# for tests
 wheel
 DBUtils
+
+# for tests
 mock
 pycodestyle
 pylint
 pytest
+pytest-cov >= 2.11.1
 pytest-postgresql >= 2.5.0
 pytest-timeout
 sphinx_rtd_theme
