Fix action repodata

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -48,6 +48,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          sudo apt-get update
           sudo apt-get install -y libboost-dev
           python -m pip install --upgrade pip
           python -m pip install --upgrade wheel
@@ -106,6 +107,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          sudo apt-get update
           sudo apt-get install -y python3-pip python3-psycopg2 latexmk texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended
           python -m pip install --upgrade pip
           python -m pip install -r requirements.txt
