--- a/.codecov.yml
+++ b/.codecov.yml
@@ -3,6 +3,12 @@ coverage:
     project:
       default:
         target: auto
-        # adjust accordingly based on how flaky your tests are
         # this allows a 10% drop from the previous base commit coverage
         threshold: 10%
+        informational: true
+    patch:
+      default:
+        target: auto
+        # this allows a 10% drop from the previous base commit coverage
+        threshold: 10%
+        informational: true
