--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,8 @@ pytest >= 6.2.2
 pytest-cov >= 2.11.1
 pytest-postgresql >= 2.5.3
 pytest-timeout >= 1.4.2
+
+# for doc
 sphinx_rtd_theme >= 0.5.1
 
 # conditional requirements
