--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -57,6 +57,7 @@ jobs:
       - name: Run Unit Tests on Python ${{ matrix.python-version }}
         env:
           PYTHONPATH: ${{ github.workspace }}/../
+          PYTEST_TIMEOUT: 900
         run: |
           pytest --cov-report term --cov-report xml
 
