Constrain gh-pages creation to pushed tags.

--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -2,11 +2,11 @@
 name: Make Our Github Pages
 
 # Controls when the action will run. Triggers the workflow on push
-# events - but only for the master branch
+# events - but only for pushed tags
 on:
   push:
-    branches:
-      - master
+    tags:
+      - [0-9].[0-9]+
 
 jobs:
   build-docs:
