--- a/requirements/requirements-develop.txt
+++ b/requirements/requirements-develop.txt
@@ -16,5 +16,6 @@ pytest-timeout >= 1.4.2
 sphinx_rtd_theme >= 0.5.1
 
 # for packages
+setuptools >= 42
 setuptools-scm >= 5.0.1
 setuptools-scm[toml] >= 5.0.1
