--- a/.github/actions/pytest-in-sl7-container/Dockerfile
+++ b/.github/actions/pytest-in-sl7-container/Dockerfile
@@ -1,6 +1,4 @@
 FROM hepcloud/decision-engine-ci
 COPY entrypoint.sh /entrypoint.sh
-RUN groupadd -g 115 decision-engine-ci
-RUN useradd -u 1001 -g 115 decision-engine-ci
-USER decision-engine-ci
+USER decisionengine
 ENTRYPOINT ["/entrypoint.sh"]
