--- a/.github/actions/rpmbuild-in-sl7-container/Dockerfile.jenkins
+++ b/.github/actions/rpmbuild-in-sl7-container/Dockerfile.jenkins
@@ -1,9 +1,5 @@
 ARG BASEIMAGE=${BASEIMAGE:-hepcloud/decision-engine-ci}
 FROM ${BASEIMAGE:-hepcloud/decision-engine-ci}
-ARG USER
-ARG GROUP
 COPY entrypoint.sh /entrypoint.sh
-RUN groupadd -g ${GROUP:-500} decision-engine-ci
-RUN useradd -u ${USER:-500} -g ${GROUP:-500} decision-engine-ci
-USER decision-engine-ci
+USER decisionengine
 ENTRYPOINT ["/entrypoint.sh"]
