--- a/.github/workflows/rpm-build.yaml
+++ b/.github/workflows/rpm-build.yaml
@@ -28,5 +28,5 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: rpms
-          path: dist/*.rpm
+          path: decisionengine/dist/*.rpm
           if-no-files-found: error
